--- a/fetool/styles/globals.css
+++ b/fetool/styles/globals.css
@@ -1,26 +1,48 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.content {
+  background-image: url("../assets/survey.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  height: 70vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.heading{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    height: 6vh;
+    box-shadow: 0px 0px 0px 100vmax rgba(0, 0, 0, 0.2);
+    
 }
 
-* {
-  box-sizing: border-box;
+.form {
+  background-color: white;
+  border-radius: 10px;
+  padding: 2rem;
+  min-width: 80%;
+  margin: 2rem;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.title {
+  color: Black;
+}
+
+.secondary-action {
+  padding: 1rem 0;
+}
+
+
+
+
+@media screen and (min-width: 768px) {
+  .content {
+      justify-content: flex-end;
   }
-  body {
-    color: white;
-    background: black;
+  .form {
+      min-width: 24rem;
   }
 }
