--- a/fetool/styles/globals.css
+++ b/fetool/styles/globals.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  text-align: center;
   align-items: center;
   padding: 0px;
   gap: 12px;
@@ -21,11 +22,13 @@
   position: absolute;
   top: 20%;
   left: 40%;
+  right: 40%;
 }
 .form {
   position: absolute;
   top: 40%;
   left: 40%;
+  right: 40%;
 }
 .MuiOutlinedInput-input:hover {
   cursor: pointer;
