--- a/fetool/styles/globals.css
+++ b/fetool/styles/globals.css
@@ -26,11 +26,46 @@
   margin-left: 60%;
   margin-top: 15%;
   margin-right: 10%;
-  width: auto;
+  width: 20%;
 }
 .MuiOutlinedInput-input:hover {
   cursor: pointer;
 }
 .MuiOutlinedInput-input:focus {
   cursor: auto;
+}
+
+.footerClass {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 5px 2px 5px 35px;
+  gap: 8px;
+  font-size: 15px;
+  font-weight: 400;
+  color: #000000de;
+  background-color: "#4153AF";
+  width: 271px;
+  height: 30px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  /* hover-75 */
+  border-top: 1.5px solid rgba(198, 203, 230, 0.75);
+}
+
+.circle2 {
+  width: 10px;
+  height: 10px;
+  background: #4caf50;
+  border-radius: 5px;
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  background: red;
+  border-radius: 5px;
 }
